bdr.BDR2.scala.error
Erreur de compilation :
BDR2:7: error: '=>' expected but '=' found.
    case litMessage()="R" => droite()
                     ^BDR2:10: error: '=>' expected but '=' found.
    case litMessage()="L" => gauche()
                     ^BDR2:13: error: '=>' expected but '=' found.
    case litMessage()="I" => retourne()
                     ^BDR2:16: error: '=>' expected but '=' found.
    case litMessage()="A" => avance()
                     ^BDR2:18: error: '=>' expected but '=' found.
    case litMessage()="B" => avance()
                     ^BDR2:21: error: '=>' expected but '=' found.
    case litMessage()="C" => avance()
                     ^BDR2:25: error: '=>' expected but '=' found.
    case litMessage()="D" => avance()
                     ^BDR2:30: error: '=>' expected but '=' found.
    case litMessage()="E" => avance()
                     ^BDR2:36: error: '=>' expected but '=' found.
    case litMessage()="F" => avance()
                     ^BDR2:43: error: '=>' expected but '=' found.
    case litMessage()="Z" => recule()
                     ^BDR2:45: error: '=>' expected but '=' found.
    case litMessage()="Y" => recule()
                     ^BDR2:48: error: '=>' expected but '=' found.
    case litMessage()="X" => recule()
                     ^BDR2:52: error: '=>' expected but '=' found.
    case litMessage()="W" => recule()
                     ^BDR2:57: error: '=>' expected but '=' found.
    case litMessage()="V" => recule()
                     ^BDR2:63: error: '=>' expected but '=' found.
    case litMessage()="U" => recule()
                     ^